--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         xhr.send();
     }
 
-    request('http://jacob-heroku-sample-api-1.herokuapp.com/latest', function (data) {
+    request('https://jacob-heroku-sample-api-1.herokuapp.com/latest', function (data) {
         var $element = document.querySelector('#content');
 
         if (data.error) {
